# taxi_prediction_fullstack_edvin

./: README.md  pyproject.toml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/data/: cleaned_taxi_data.csv
src/taxipred/frontend/: app.py
src/taxipred/frontend/pages/: home.py  price_predictor.py
src/taxipred/model_development/: eda.ipynb  eda2.ipynb  model_dev.ipynb
src/taxipred/utils/: constants.py
