[project]
name = "taxipred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EdvinGlawing", email = "glawing.edvin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]

[project.scripts]
taxipred = "taxipred:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
